Adiciona ambiente configurado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -226,7 +226,11 @@
         </defs>
       </svg>
       <h1>Hello, {{ title }}</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
+      <p class="underline">Congratulations! Your app is running. 🎉</p>
+      <button pButton pRipple severity="success">
+        <WindowMaximizeIcon pButtonIcon />
+        <span pButtonLabel>label</span>
+    </button>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
