--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <div class="max-w-7xl mx-auto">
     <div class="p-4 flex">
-        <a href="">
+        <a [routerLink]="['/']">
             <img src="assets/images/favicon.ico" alt="Logo" class="w-[150px]">
         </a>
 
         <div class="ms-auto flex items-center ">
-            <a href="" class="bg-indigo-500 text-white px-4 p-y2 rounded">
+            <a [routerLink]="['./create-post']" class="bg-indigo-500 text-white px-4 p-y2 rounded">
                 Create Post
             </a>
         </div>
